--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+apache (1.3.42-4) stable; urgency=low
+
+  * Bump version to trigger rebuild
+
+ -- Allard Hoeve <allard@byte.nl>  Wed, 19 Dec 2012 15:08:13 +0100
+
 apache (1.3.42-3) stable; urgency=low
 
   * Add dependency on libgdbm-dev so we have libgdbm.so
