--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+apache (1.3.42-2ixa) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+
+ -- Danielle Madeley <dmadeley@infoxchange.net.au>  Mon, 24 Jun 2013 10:04:00 +1000
+
 apache (1.3.42-2) unstable; urgency=low
 
   * Rebuild for wheezy
